# rigid_objects_pose_estimation

./: CMakeLists.txt  README.md  conanfile.py
include/: AlignmentPrerejective.h
src/: AlignmentPrerejective.cpp
test/: CMakeLists.txt  LibraryTest.cpp
